<?xml version="1.0" encoding="utf-8"?><!--英语-->
<resources>
    <string name="mynewsname">ToToNews</string>
    <string name="back">Back</string>
    <string name="clear">clear</string>
    <string name="no_comment">No comment</string>
    <string name="no_follow_video_data_list">No Data</string>
    <string name="updateApk">please wait…</string>
    <string name="notices">Notices</string>
    <string name="your_account_has_loggedin_on_other_device">Your account has loggedin on other device</string>
    <string name="re_login">Re-login</string>
    <string name="length_0">0s</string>
    <string name="network_down">Network Down</string>
    <string name="news">News</string>
    <string name="me_l_daily">Daily Challenge</string>
    <string name="me">Me</string>
    <string name="s_ad">ad</string>
    <string name="log_in_me">Log In</string>
    <string name="login_tip">Log in to cash out</string>
    <string name="earn_text_2">Friends</string>
    <string name="me_coins">Coins</string>
    <string name="me_l_enter_your">Enter your inviter\'s code</string>
    <string name="exchange">Exchange</string>
    <string name="me_rank">Billboard</string>
    <string name="me_agree">Feedback</string>
    <string name="me_l_contact">Contact Us</string>
    <string name="me_l_setting">Settings</string>
    <string name="me_age">AGE&#160;%1$d</string>
    <string name="task">Daily Earning Tasks</string>
    <string name="you_not_installed_twitter">You\'ve not installed Twitter App,Please re-try after installation.</string>
    <string name="or">or</string>
    <string name="email_login">email login</string>
    <string name="by_signing_up_you_agree_to_the_privacy_policy_including_use_cookie_use">By signing up,you agree to the Privacy Policy，Including use Cookie Use。</string>
    <string name="enter_e_mail_address">Enter e-mail address</string>
    <string name="enter_password">Enter password</string>
    <string name="forget_password">Forget password</string>
    <string name="password_must_be_6_to_22_numbers">Password must be 6 to 22 numbers</string>
    <string name="thrid_fail">Authorization failed!</string>
    <string name="s_re_try">s Re-try</string>
    <string name="get_code">Get code</string>
    <string name="the_verifacation_code_has_been_send_to_your_email">The verifacation code has been send to your email</string>
    <string name="sendCodeerror">Error</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_code">Enter code</string>
    <string name="new_pass_word">New Password must be 6 to 22 numbers</string>
    <string name="reset_now">Reset now</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="unknow">Unknown</string>
    <string name="me_l_apprentice">Invite</string>
    <string name="earn_title">Earn 6000 coins for the First  invitation</string>
    <string name="earn_text_2_new">Friends\n&#160;</string>
    <string name="earn_text_3_new">2nd Class \nFriends</string>
    <string name="earn_text_1_new">Coins From \nFriends</string>
    <string name="earn_text_8">1.The first invite，award 6000 coins\n\n2.Earn 2&#8211;21 times contribution of your friends if they keep earning here</string>
    <string name="earn_text_6">The bonus of invitation</string>
    <string name="earn_text_7">Your income will rise sharply after your friends earned by watching video,you can be award more coins from friends.</string>
    <string name="cancel">Cancel</string>
    <string name="report">report</string>
    <string name="delete">Delete</string>
    <string name="linked_in">Gmail</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="copy_link">Copy link</string>
    <string name="earn_value">You\'ve invited  %1$d friends, invite %2$d more to earn %3$d coins from your friends</string>
    <string name="earn_title_stock">Life is much more fun when you have more friends</string>
    <string name="sharing_reward">Sharing reward</string>
    <string name="version_unknown" translatable="false">Unknown Version</string>
    <string name="congratulation">Congratulation</string>
    <string name="treasure_box_context">More friends More Coins</string>
    <string name="share_to_twitter_to_earn_10_more">Share to Twitter to earn 10 more</string>
    <string name="network_unavailable_try_again_later">Network unavailable.Try again later.</string>
    <string name="s_share_faild">unable to share,try again later</string>
    <string name="sign_in_context">Check-in everyday to get more</string>
    <string name="s_shared">shared</string>
    <string name="link_email">Link email</string>
    <string name="introduce_video_title">New user video tutorial</string>
    <string name="message">Message</string>
    <string name="feedback_type">Issue category</string>
    <string name="feedback_detail">Description</string>
    <string name="tip_feedback">We give out 1000~2000 coins for your issue as soon as we reviewed your feedback</string>
    <string name="submit">Submit</string>
    <string name="feedback_select_type">Select issue category</string>
    <string name="feedback_inpit_detail">Please write your issue in detail</string>
    <string name="s_clear_cache">Clear cache</string>
    <string name="version">Version</string>
    <string name="clearUp">Have been cleaned up</string>
    <string name="s_up_data">Update</string>
    <string name="s_logout">Logout</string>
    <string name="checking">checking...</string>
    <string name="update">Update Version</string>
    <string name="update_info">This version is out of date,please install the latest version of the app</string>
    <string name="update_later">Update Later</string>
    <string name="update_now">Update Now</string>
    <string name="you_are_all_caught_up">You are all caught up</string>
    <string name="downloading">downloading </string>
    <string name="update_vision_log">Go to google play store to download the latest version</string>
    <string name="go">GO</string>
    <string name="save">Save</string>
    <string name="example">Write something special here</string>
    <string name="please_input_age">Please select birth date</string>
    <string name="click_to_choose">Click to choose</string>
    <string name="click_to_change_photo">Click to change photo</string>
    <string name="age">Age</string>
    <string name="nickname">Nickname</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sex">Gender</string>
    <string name="album_import">Import</string>
    <string name="Sanp">Take photo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="overlong"> Overlong input</string>
    <string name="please_say_something">Please Say Something...</string>
    <string name="success">Success</string>
    <string name="sharedSuccess">Sharing success</string>
    <string name="sharedFialed">Sharing failure</string>
    <string name="open_the_treasure_box">Open The Treasure box</string>
    <string name="task_info">%1$s has withdrawed %2$s dollars</string>
    <string name="task_go_select">Claim</string>
    <string name="task_go_un">Claimed</string>
    <string name="send">send</string>
    <string name="copy">Copy</string>
    <string name="me_shared_code">Share your W &amp; E code to social media to invite more， get contribution from your friends</string>
    <string name="sharedCancel">Sharing cancellation</string>
    <string name="foryou">For You</string>
    <string name="earn_basic">Basic</string>
    <string name="earn_permanent">Permanent</string>
    <string name="my_friends">My Friends</string>
    <string name="my_we_code">My WE Code</string>
    <string name="nomessage">No message</string>

    <string name="years">years ago</string>
    <string name="year">year ago</string>
    <string name="month">month ago</string>
    <string name="months">month ago</string>
    <string name="days">days ago</string>
    <string name="day">day ago</string>
    <string name="hours">hours ago</string>
    <string name="hour">hour ago</string>
    <string name="minits">minutes ago</string>
    <string name="minute">minute ago</string>
    <string name="justnow">just now</string>
    <!--新增-->
    <string name="invit">invite</string>
    <!-- 新闻详情新增 -->
    <string name="review_size">Reviews(%1$d)</string>
    <string name="startinvalit">Start Inviting Friends</string>

    <!-- 个人中心 -->
    <string name="un_login">Log In to cash out</string>

    <!-- 绑定邮箱 -->
    <string name="bind" translatable="false">Bind</string>
    <string name="successful">Successful</string>
    <string name="bind_email_success">Email address linked</string>
    <!--谷歌登录所需的client id-->
    <string name="server_client_id">25829066311-c4nfpmrihs6cant98cj7i40qps2eelfv.apps.googleusercontent.com</string>
    <!--facebook denglu-->
    <string name="facebook_app_id">425325671330602</string>
    <string name="fb_login_protocol_scheme">fb425325671330602</string>

</resources>