<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.mine.activity.FeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/action_bar_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/me_agree"
            android:textColor="@color/c333"
            android:textSize="17sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFE4E4E4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="21dp"
                android:text="@string/feedback_type"
                android:textColor="@color/c333"
                android:textSize="16sp" />

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/taglayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="18dp"
                zhy:max_select="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="28dp"
                android:text="@string/feedback_detail"
                android:textColor="@color/c333"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_input"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/edit_feedback_bg"
                android:gravity="start"
                android:padding="4dp"
                android:textColor="@color/c333"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/submit_selector"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="69dp"
                android:layout_marginRight="69dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tip_feedback"
                android:textColor="@color/c999999"
                android:textSize="13sp" />
        </LinearLayout>

        <com.news.mobilephone.view.EmptyLayout
            android:id="@+id/mEmptyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>