<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.news.mobilephone.main.home.activity.MainActivity">

    <FrameLayout
        android:id="@+id/fl_main_containt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.roughike.bottombar.BottomBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-1dp"
        android:visibility="gone"
        app:bb_tabXmlResource="@xml/bottombar_tabs" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/foryou"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/foryou_background_nu"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/foryou"
            android:textColor="@color/c999999"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/daily_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/video_nu"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/me_l_daily"
            android:textColor="@color/c999999"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/me_nu"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/me"
            android:textColor="@color/c999999"
            android:textSize="11sp" />

    </LinearLayout>
</LinearLayout>
