<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_login_shape"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_login_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="21dp"
            android:text="@string/login_tip"
            android:textColor="@color/c333"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fast_login"
            android:textColor="@color/c999999"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/facebook_big" />

            <ImageView
                android:id="@+id/tt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/tw_big" />

            <ImageView
                android:id="@+id/ins_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ins_big"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/gmail_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/gmail" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/or"
            android:textColor="@color/c999999"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:background="@drawable/task_top_shape"
            android:gravity="center"
            android:text="@string/email_login"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/by_signing_up_you_agree_to_the_privacy_policy_including_use_cookie_use"
            android:textColor="@color/c333"
            android:textSize="12sp" />

    </LinearLayout>

    <include layout="@layout/dialog_login_input" />
</LinearLayout>